need to work on giving integral1DWWYYKK ->3D

--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "id": "edecf3ac",
    "metadata": {},
    "outputs": [
@@ -1183,21 +1183,24 @@
     "        Adapt.adapt(backend, Float32.(A))\n",
     "    end\n",
     "\n",
-    "    int_gpu = adapt(backend, zeros(Float32,nCoordinates,nPoints, nPoints, nLs, nLs))\n",
+    "    int_gpu = adapt(backend,\n",
+    "    Array{Float32,5}(undef, nCoordinates, size(int_gpu_single[1])...))\n",
     "    for i in 1:nCoordinates\n",
-    "        int_gpu[i,:, :, :, :] .= int_gpu_single[i]\n",
+    "        int_gpu[i,:,:,:,:] .= int_gpu_single[i]\n",
     "    end\n",
+    "\n",
+    "    @show size(int_gpu_single[1])\n",
     "\n",
     "    output_gpu = adapt(backend, zeros(Float32, nPoints, nPoints, nTotalSmallα))\n",
     "\n",
     "    #endregion\n",
     "    \n",
     "\n",
-    "    #region GPU kernel\n",
+    "    #region GPU kernel function\n",
     "    @kernel function windowContraction!(\n",
     "    output,   # Array{Float32,4} on GPU: (P,P,nalpha)\n",
     "    C,        # Array{Float32,3} on GPU: (P,L,P)\n",
-    "    int,    # Array{Float32,5} on GPU: (nDim, P, P, L, L)\n",
+    "    int,    # Array{Float32,5} on GPU: (nDim, L, L,P,P)\n",
     "    table, # Array{Int32,3} on GPU: (4,L*L, nalpha)\n",
     "    P, L, nDim, nalpha\n",
     "    )\n",
@@ -1219,36 +1222,45 @@
     "                l = table[4, idx, α]\n",
     "\n",
     "                if i >0\n",
-    "                    for μp in 1:L\n",
-    "                        for μ in 1:L\n",
+    "                    for μᶜ in 1:P\n",
+    "                        for μ in 1:P\n",
     "                            prod_int = 1.0f0\n",
     "                            for iDim in 1:nDim\n",
-    "                                prod_int *= int[iDim, μp, μ, k, l]\n",
+    "                                prod_int *= int[iDim, μᶜ, μ, k, l]\n",
     "                            end\n",
-    "                            acc += C[xp, i, μp] * C[x, j, μ] * prod_int  # <- corrected x' in first C\n",
+    "                            acc += C[xᶜ, i, μᶜ] * C[x, j, μ] * prod_int  # <- corrected x' in first C\n",
     "                        end\n",
     "                    end\n",
     "                end\n",
     "            end\n",
     "\n",
-    "            output[xp, x, α] = acc\n",
+    "            output[xᶜ, x, α] = acc\n",
     "        end\n",
     "    end\n",
     "\n",
     "    #endregion\n",
     "   \n",
     "    \n",
-    "    kernel = window_contraction!(backend)\n",
+    "    kernel = windowContraction!(backend)\n",
+    "    kernel(output_gpu, C_gpu, int_gpu, tableForLoop_gpu,\n",
+    "       Int32(nPoints), Int32(nLs), Int32(nCoordinates), Int32(nTotalSmallα);\n",
+    "       ndrange=(nPoints, nPoints, nTotalSmallα))\n",
     "\n",
-    "    kernel(output_gpu, C_gpu, int_gpu, tableForLoop_gpu,nPoints, nLs, nCoordinates;\n",
-    "            ndrange=(nPoints, nPoints, nTotalSmallα))\n",
-    "            return\n",
+    "    return output_gpu\n",
     "end "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 172,
+   "id": "426e6b7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
    "id": "9573260e",
    "metadata": {},
    "outputs": [
@@ -1257,34 +1269,82 @@
      "output_type": "stream",
      "text": [
       "α = bigα[iExpr, iField] = Any[(node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(3, 1, 1)), (node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 3, 1)), (node = 1, nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 1, 3))]\n",
-      "tableForLoop[:, 2, 1] = Int32[1, 4, 1, 2]\n",
-      "(typeof(Cˡη), typeof(integral1DWYYKK), size(integral1DWYYKK)) = (Array{Float64, 3}, Vector{Any}, (3,))\n"
+      "size(int_gpu_single[1]) = (3, 3, 5, 5)\n"
      ]
     },
     {
-     "ename": "DimensionMismatch",
-     "evalue": "DimensionMismatch: array could not be broadcast to match destination",
+     "ename": "GPUCompiler.InvalidIRError",
+     "evalue": "InvalidIRError: compiling MethodInstance for (::var\"#gpu_windowContraction!#593\")(::KernelAbstractions.CompilerMetadata{KernelAbstractions.NDIteration.DynamicSize, KernelAbstractions.NDIteration.DynamicCheck, Nothing, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, KernelAbstractions.NDIteration.NDRange{3, KernelAbstractions.NDIteration.DynamicSize, KernelAbstractions.NDIteration.DynamicSize, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}}}, ::MtlDeviceArray{Float32, 3, 1}, ::MtlDeviceArray{Float32, 3, 1}, ::MtlDeviceArray{Float32, 5, 1}, ::MtlDeviceArray{Int32, 3, 1}, ::Int32, ::Int32, ::Int32, ::Int32) resulted in invalid LLVM IR\nReason: unsupported call to an unknown function (call to gpu_gc_pool_alloc)\nStacktrace:\n [1] macro expansion\n   @ ~/.julia/packages/KernelAbstractions/X5fk1/src/macros.jl:331\n [2] gpu_windowContraction!\n   @ ./none:0\nReason: unsupported call to an unknown function (call to jl_f_throw_methoderror)\nStacktrace:\n [1] macro expansion\n   @ ~/.julia/packages/KernelAbstractions/X5fk1/src/macros.jl:331\n [2] gpu_windowContraction!\n   @ ./none:0\nHint: catch this exception as `err` and call `code_typed(err; interactive = true)` to introspect the erroneous code with Cthulhu.jl",
      "output_type": "error",
      "traceback": [
-      "DimensionMismatch: array could not be broadcast to match destination\n",
+      "InvalidIRError: compiling MethodInstance for (::var\"#gpu_windowContraction!#593\")(::KernelAbstractions.CompilerMetadata{KernelAbstractions.NDIteration.DynamicSize, KernelAbstractions.NDIteration.DynamicCheck, Nothing, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, KernelAbstractions.NDIteration.NDRange{3, KernelAbstractions.NDIteration.DynamicSize, KernelAbstractions.NDIteration.DynamicSize, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}}}, ::MtlDeviceArray{Float32, 3, 1}, ::MtlDeviceArray{Float32, 3, 1}, ::MtlDeviceArray{Float32, 5, 1}, ::MtlDeviceArray{Int32, 3, 1}, ::Int32, ::Int32, ::Int32, ::Int32) resulted in invalid LLVM IR\n",
+      "Reason: unsupported call to an unknown function (call to gpu_gc_pool_alloc)\n",
+      "Stacktrace:\n",
+      " [1] macro expansion\n",
+      "   @ ~/.julia/packages/KernelAbstractions/X5fk1/src/macros.jl:331\n",
+      " [2] gpu_windowContraction!\n",
+      "   @ ./none:0\n",
+      "Reason: unsupported call to an unknown function (call to jl_f_throw_methoderror)\n",
+      "Stacktrace:\n",
+      " [1] macro expansion\n",
+      "   @ ~/.julia/packages/KernelAbstractions/X5fk1/src/macros.jl:331\n",
+      " [2] gpu_windowContraction!\n",
+      "   @ ./none:0\n",
+      "Hint: catch this exception as `err` and call `code_typed(err; interactive = true)` to introspect the erroneous code with Cthulhu.jl\n",
       "\n",
       "Stacktrace:\n",
-      " [1] check_broadcast_shape\n",
-      "   @ ./broadcast.jl:559 [inlined]\n",
-      " [2] check_broadcast_axes\n",
-      "   @ ./broadcast.jl:562 [inlined]\n",
-      " [3] instantiate\n",
-      "   @ ./broadcast.jl:316 [inlined]\n",
-      " [4] materialize!\n",
-      "   @ ~/.julia/packages/Metal/av3If/src/broadcast.jl:48 [inlined]\n",
-      " [5] materialize!(dest::SubArray{Float32, 4, MtlArray{Float32, 5, Metal.PrivateStorage}, Tuple{Int64, Vararg{Base.Slice{Base.OneTo{Int64}}, 4}}, true}, bc::Base.Broadcast.Broadcasted{Metal.MtlArrayStyle{4, Metal.PrivateStorage}, Nothing, typeof(identity), Tuple{MtlArray{Float32, 4, Metal.PrivateStorage}}})\n",
-      "   @ Base.Broadcast ./broadcast.jl:902\n",
-      " [6] AmatrixSemiSymbolicGPU(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64; threads::Int64, backend::MetalBackend)\n",
-      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X52sZmlsZQ==.jl:112\n",
-      " [7] AmatrixSemiSymbolicGPU(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64)\n",
-      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X52sZmlsZQ==.jl:1\n",
-      " [8] top-level scope\n",
-      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X53sZmlsZQ==.jl:1"
+      "  [1] check_ir(job::GPUCompiler.CompilerJob{GPUCompiler.MetalCompilerTarget, Metal.MetalCompilerParams}, args::LLVM.Module)\n",
+      "    @ GPUCompiler ~/.julia/packages/GPUCompiler/Gp8bZ/src/validation.jl:167\n",
+      "  [2] macro expansion\n",
+      "    @ ~/.julia/packages/GPUCompiler/Gp8bZ/src/driver.jl:417 [inlined]\n",
+      "  [3] macro expansion\n",
+      "    @ ~/.julia/packages/Tracy/tYwAE/src/tracepoint.jl:163 [inlined]\n",
+      "  [4] emit_llvm(job::GPUCompiler.CompilerJob; kwargs::@Kwargs{})\n",
+      "    @ GPUCompiler ~/.julia/packages/GPUCompiler/Gp8bZ/src/driver.jl:416\n",
+      "  [5] emit_llvm\n",
+      "    @ ~/.julia/packages/GPUCompiler/Gp8bZ/src/driver.jl:182 [inlined]\n",
+      "  [6] compile_unhooked(output::Symbol, job::GPUCompiler.CompilerJob; kwargs::@Kwargs{})\n",
+      "    @ GPUCompiler ~/.julia/packages/GPUCompiler/Gp8bZ/src/driver.jl:95\n",
+      "  [7] compile_unhooked(output::Symbol, job::GPUCompiler.CompilerJob)\n",
+      "    @ GPUCompiler ~/.julia/packages/GPUCompiler/Gp8bZ/src/driver.jl:80\n",
+      "  [8] compile(target::Symbol, job::GPUCompiler.CompilerJob; kwargs::@Kwargs{})\n",
+      "    @ GPUCompiler ~/.julia/packages/GPUCompiler/Gp8bZ/src/driver.jl:67\n",
+      "  [9] compile\n",
+      "    @ ~/.julia/packages/GPUCompiler/Gp8bZ/src/driver.jl:55 [inlined]\n",
+      " [10] (::Metal.var\"#compile##0#compile##1\"{GPUCompiler.CompilerJob{GPUCompiler.MetalCompilerTarget, Metal.MetalCompilerParams}})(ctx::LLVM.Context)\n",
+      "    @ Metal ~/.julia/packages/Metal/av3If/src/compiler/compilation.jl:173\n",
+      " [11] JuliaContext(f::Metal.var\"#compile##0#compile##1\"{GPUCompiler.CompilerJob{GPUCompiler.MetalCompilerTarget, Metal.MetalCompilerParams}}; kwargs::@Kwargs{})\n",
+      "    @ GPUCompiler ~/.julia/packages/GPUCompiler/Gp8bZ/src/driver.jl:34\n",
+      " [12] JuliaContext(f::Function)\n",
+      "    @ GPUCompiler ~/.julia/packages/GPUCompiler/Gp8bZ/src/driver.jl:25\n",
+      " [13] macro expansion\n",
+      "    @ ~/.julia/packages/Metal/av3If/src/compiler/compilation.jl:172 [inlined]\n",
+      " [14] macro expansion\n",
+      "    @ ~/.julia/packages/ObjectiveC/UNTzb/src/os.jl:264 [inlined]\n",
+      " [15] compile(job::GPUCompiler.CompilerJob)\n",
+      "    @ Metal ~/.julia/packages/Metal/av3If/src/compiler/compilation.jl:170\n",
+      " [16] actual_compilation(cache::Dict{Any, Any}, src::Core.MethodInstance, world::UInt64, cfg::GPUCompiler.CompilerConfig{GPUCompiler.MetalCompilerTarget, Metal.MetalCompilerParams}, compiler::typeof(Metal.compile), linker::typeof(Metal.link))\n",
+      "    @ GPUCompiler ~/.julia/packages/GPUCompiler/Gp8bZ/src/execution.jl:245\n",
+      " [17] cached_compilation(cache::Dict{Any, Any}, src::Core.MethodInstance, cfg::GPUCompiler.CompilerConfig{GPUCompiler.MetalCompilerTarget, Metal.MetalCompilerParams}, compiler::Function, linker::Function)\n",
+      "    @ GPUCompiler ~/.julia/packages/GPUCompiler/Gp8bZ/src/execution.jl:159\n",
+      " [18] macro expansion\n",
+      "    @ ~/.julia/packages/Metal/av3If/src/compiler/execution.jl:189 [inlined]\n",
+      " [19] macro expansion\n",
+      "    @ ./lock.jl:376 [inlined]\n",
+      " [20] mtlfunction(f::var\"#gpu_windowContraction!#593\", tt::Type{Tuple{KernelAbstractions.CompilerMetadata{KernelAbstractions.NDIteration.DynamicSize, KernelAbstractions.NDIteration.DynamicCheck, Nothing, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, KernelAbstractions.NDIteration.NDRange{3, KernelAbstractions.NDIteration.DynamicSize, KernelAbstractions.NDIteration.DynamicSize, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}}}, MtlDeviceArray{Float32, 3, 1}, MtlDeviceArray{Float32, 3, 1}, MtlDeviceArray{Float32, 5, 1}, MtlDeviceArray{Int32, 3, 1}, Vararg{Int32, 4}}}; name::Nothing, kwargs::@Kwargs{})\n",
+      "    @ Metal ~/.julia/packages/Metal/av3If/src/compiler/execution.jl:184\n",
+      " [21] mtlfunction(f::var\"#gpu_windowContraction!#593\", tt::Type{Tuple{KernelAbstractions.CompilerMetadata{KernelAbstractions.NDIteration.DynamicSize, KernelAbstractions.NDIteration.DynamicCheck, Nothing, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, KernelAbstractions.NDIteration.NDRange{3, KernelAbstractions.NDIteration.DynamicSize, KernelAbstractions.NDIteration.DynamicSize, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}}}, MtlDeviceArray{Float32, 3, 1}, MtlDeviceArray{Float32, 3, 1}, MtlDeviceArray{Float32, 5, 1}, MtlDeviceArray{Int32, 3, 1}, Vararg{Int32, 4}}})\n",
+      "    @ Metal ~/.julia/packages/Metal/av3If/src/compiler/execution.jl:182\n",
+      " [22] macro expansion\n",
+      "    @ ~/.julia/packages/Metal/av3If/src/compiler/execution.jl:85 [inlined]\n",
+      " [23] (::KernelAbstractions.Kernel{MetalBackend, KernelAbstractions.NDIteration.DynamicSize, KernelAbstractions.NDIteration.DynamicSize, var\"#gpu_windowContraction!#593\"})(::MtlArray{Float32, 3, Metal.PrivateStorage}, ::Vararg{Any}; ndrange::Tuple{Int64, Int64, Int64}, workgroupsize::Nothing)\n",
+      "    @ Metal.MetalKernels ~/.julia/packages/Metal/av3If/src/MetalKernels.jl:115\n",
+      " [24] AmatrixSemiSymbolicGPU(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64; threads::Int64, backend::MetalBackend)\n",
+      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X52sZmlsZQ==.jl:167\n",
+      " [25] AmatrixSemiSymbolicGPU(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64)\n",
+      "    @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X52sZmlsZQ==.jl:1\n",
+      " [26] top-level scope\n",
+      "    @ ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X53sZmlsZQ==.jl:1"
      ]
     }
    ],
