--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "id": "edecf3ac",
    "metadata": {},
    "outputs": [
@@ -1138,10 +1138,12 @@
     "  \n",
     "    #endregion\n",
     "\n",
+    "\n",
     "    #region make the table for each (x',x,n',n) (x=η+μ)\n",
     "    nTotalSmallα = sum(length(bigα[iExpr, iField]) for iExpr in 1:NtypeofExpr, iField in 1:NtypeofFields)\n",
     "\n",
-    "    tableForLoop = Array{Int32,3}(undef,4,nLs*nLs,nTotalSmallα)\n",
+    "    tableForLoop = Array{Int32,3}(undef,2+nCoordinates*2,nLs*nLs,nTotalSmallα)\n",
+    "    \n",
     "    fill!(tableForLoop, -1)\n",
     "    indexLinearα = 1\n",
     "    for iExpr ∈ 1:NtypeofExpr,iField ∈ 1:NtypeofFields\n",
@@ -1161,10 +1163,15 @@
     "                \n",
     "                tableForLoop[1,iL,indexLinearα]= LI_L_MINUS_N_plus_1[lᶜ+vec2car(ones(Int,nCoordinates))]\n",
     "                tableForLoop[2,iL,indexLinearα]= LI_L_MINUS_N_plus_1[l+vec2car(ones(Int,nCoordinates))]\n",
-    "                tableForLoop[3,iL,indexLinearα]= LI_L_MINUS_N_plus_1[lᶜ-nᶜ+vec2car(ones(Int,nCoordinates))]\n",
-    "                tableForLoop[4,iL,indexLinearα]= LI_L_MINUS_N_plus_1[l-n+vec2car(ones(Int,nCoordinates))]\n",
-    "            \n",
-    "                \n",
+    "                #tableForLoop[3,iL,indexLinearα]= LI_L_MINUS_N_plus_1[lᶜ-nᶜ+vec2car(ones(Int,nCoordinates))]\n",
+    "                #tableForLoop[4,iL,indexLinearα]= LI_L_MINUS_N_plus_1[l-n+vec2car(ones(Int,nCoordinates))]\n",
+    "                tmplᶜ_nᶜ = lᶜ-nᶜ+vec2car(ones(Int,nCoordinates))\n",
+    "                tmpl_n = l-n+vec2car(ones(Int,nCoordinates))\n",
+    "                for iCoord ∈ 1:nCoordinates\n",
+    "                    tableForLoop[2+iCoord,iL,indexLinearα] = tmplᶜ_nᶜ[iCoord]\n",
+    "                    tableForLoop[2+iCoord+nCoordinates,iL,indexLinearα] = tmpl_n[iCoord]\n",
+    "                end\n",
+    "\n",
     "                iL += 1\n",
     "            end\n",
     "       \n",
@@ -1172,6 +1179,19 @@
     "        end\n",
     "    end\n",
     "\n",
+    "\n",
+    "    #endregion\n",
+    "\n",
+    "    #region make a dictionary for μ ∈ pointsIndices and its linearised version\n",
+    "\n",
+    "    tableForPoints = Array{Int32,2}(undef,nCoordinates,nPoints)\n",
+    "\n",
+    "    for μ ∈ pointsIndices, iCoord ∈ nCoordinates\n",
+    "        Linearisedμ = LI_points[]\n",
+    "        tableForLoop[iCoord, ]\n",
+    "\n",
+    "\n",
+    "    end\n",
     "\n",
     "    #endregion\n",
     "\n",
@@ -1201,7 +1221,7 @@
     "    output,   # Array{Float32,4} on GPU: (P,P,nalpha)\n",
     "    C,        # Array{Float32,3} on GPU: (P,L,P)\n",
     "    int,    # Array{Float32,5} on GPU: (nDim, L, L,P,P)\n",
-    "    table, # Array{Int32,3} on GPU: (4,L*L, nalpha)\n",
+    "    table, # Array{Int32,3} on GPU: (2+nDim*2,L*L, nalpha)\n",
     "    P, L, nDim, nalpha\n",
     "    )\n",
     "\n",
@@ -1218,14 +1238,16 @@
     "            for idx in 1:size(table, 2)  # iterate over all entries in table for this alpha\n",
     "                i = table[1, idx, α]\n",
     "                j = table[2, idx, α]\n",
-    "                k = table[3, idx, α]\n",
-    "                l = table[4, idx, α]\n",
+    "                \n",
     "\n",
     "                if i >0\n",
     "                    for μᶜ in 1:P\n",
     "                        for μ in 1:P\n",
     "                            prod_int = 1.0f0\n",
     "                            for iDim in 1:nDim\n",
+    "                                \n",
+    "                                k = table[2+iDim, idx, α]\n",
+    "                                l = table[2+iDim+nDim, idx, α]\n",
     "                                prod_int *= int[iDim, μᶜ, μ, k, l]\n",
     "                            end\n",
     "                            acc += C[xᶜ, i, μᶜ] * C[x, j, μ] * prod_int  # <- corrected x' in first C\n",
