--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1008,7 +1008,6 @@
     "  \n",
     "    #endregion\n",
     "\n",
-    "\n",
     "    #region make the table for each (x',x,n',n) (x=η+μ)\n",
     "    nTotalSmallα = sum(length(bigα[iExpr, iField]) for iExpr in 1:NtypeofExpr, iField in 1:NtypeofFields)\n",
     "\n",
@@ -1054,8 +1053,6 @@
     "    #endregion\n",
     "\n",
     "\n",
-    " \n",
-    "\n",
     "    #region make a dictionary for μ ∈ pointsIndices and its linearised version\n",
     "\n",
     "    tableForPoints = Array{Int32,2}(undef,nCoordinates,nPoints)\n",
@@ -1098,6 +1095,8 @@
     "\n",
     "    #endregion\n",
     "    \n",
+    "    #region launch GPU computation\n",
+    "\n",
     "    # scalars in Int32\n",
     "    P      = Int32(nPoints)\n",
     "    L      = Int32(nLs)\n",
@@ -1117,10 +1116,10 @@
     "    kernel!(output_gpu, C_gpu, int_gpu, tableForLoop_gpu,tableForPoints_gpu,\n",
     "       P,L,nDim,nα,int1max,int2max,ndrange=size(output_gpu))\n",
     "    KernelAbstractions.synchronize(backend)\n",
-    "\n",
-    "\n",
+    "    #endregion\n",
     "\n",
     "    \n",
+    "\n",
     "\n",
     "    return output_gpu\n",
     "end "
