--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1052,7 +1052,6 @@
     "\n",
     "    #endregion\n",
     "\n",
-    "\n",
     "    #region make a dictionary for μ ∈ pointsIndices and its linearised version\n",
     "\n",
     "    tableForPoints = Array{Int32,2}(undef,nCoordinates,nPoints)\n",
@@ -1118,7 +1117,11 @@
     "    KernelAbstractions.synchronize(backend)\n",
     "    #endregion\n",
     "\n",
-    "    \n",
+    "    #region \n",
+    "\n",
+    "\n",
+    "\n",
+    "    #endregion\n",
     "\n",
     "\n",
     "    return output_gpu\n",
